<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HangmanAktivitet"
    android:background="#333333"
    android:id="@+id/hangmanLayout" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bildeView"
        android:src="@drawable/forste"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="false"
        android:paddingLeft="5dp"
        android:layout_below="@+id/labelNoSpacing"
        android:layout_marginTop="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_a"
                android:id="@+id/button_a"
                android:layout_column="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_b"
                android:id="@+id/button_b"
                android:layout_column="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_c"
                android:id="@+id/button_c"
                android:layout_column="2" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_d"
                android:id="@+id/button_d"
                android:layout_column="3" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_e"
                android:id="@+id/button_e"
                android:layout_column="4" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_f"
                android:id="@+id/button_f"
                android:layout_column="5" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_g"
                android:id="@+id/button_g"
                android:layout_column="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_h"
                android:id="@+id/button_h"
                android:layout_column="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_i"
                android:id="@+id/button_i"
                android:layout_column="2" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_j"
                android:id="@+id/button_j"
                android:layout_column="3" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_k"
                android:id="@+id/button_k"
                android:layout_column="4" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_l"
                android:id="@+id/button_l"
                android:layout_column="5" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_m"
                android:id="@+id/button_m"
                android:layout_column="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_n"
                android:id="@+id/button_n"
                android:layout_column="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_o"
                android:id="@+id/button_o"
                android:layout_column="2" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_p"
                android:id="@+id/button_p"
                android:layout_column="3" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_q"
                android:id="@+id/button_q"
                android:layout_column="4" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_r"
                android:id="@+id/button_r"
                android:layout_column="5" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_s"
                android:id="@+id/button_s"
                android:layout_column="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_t"
                android:id="@+id/button_t"
                android:layout_column="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_u"
                android:id="@+id/button_u"
                android:layout_column="2" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_v"
                android:id="@+id/button_v"
                android:layout_column="3" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_w"
                android:id="@+id/button_w"
                android:layout_column="4" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_x"
                android:id="@+id/button_x"
                android:layout_column="5" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_y"
                android:id="@+id/button_y"
                android:layout_column="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_z"
                android:id="@+id/button_z"
                android:layout_column="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_ae"
                android:id="@+id/button_ae"
                android:layout_column="2"
                android:singleLine="true" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_oe"
                android:id="@+id/button_oe"
                android:layout_column="3" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bokstav_aa"
                android:id="@+id/button_aa"
                android:layout_column="4" />

        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vinnLabel"
        android:id="@+id/labelVinn"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#fff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tapLabel"
        android:id="@+id/labelTap"
        android:textColor="#fff"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelAntallVinn"
        android:textColor="#fff"
        android:layout_below="@+id/labelVinn"
        android:layout_alignParentStart="true"
        android:gravity="left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelAntallTap"
        android:textColor="#fff"
        android:layout_below="@+id/labelTap"
        android:layout_alignParentEnd="true"
        android:gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelNoSpacing"
        android:layout_below="@+id/bildeView"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:textSize="25dp" />

</RelativeLayout>
