<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.s198586.hangman.Notater"
    android:background="#333333" >

    <TextView
        android:text="@string/notater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:id="@+id/reglerHeader" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vinnLabel"
        android:id="@+id/labelVinn"
        android:textColor="#fff"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tapLabel"
        android:id="@+id/labelTap"
        android:textColor="#fff"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelAntallVinn"
        android:textColor="#fff"
        android:gravity="left"
        android:layout_below="@+id/labelVinn"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelAntallTap"
        android:textColor="#fff"
        android:gravity="right"
        android:layout_below="@+id/labelTap"
        android:layout_alignParentEnd="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reglerHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_column="0"
                android:src="@drawable/spill"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spillknappforklaring"
                android:id="@+id/textView"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:textColor="#ffffff"
                android:layout_margin="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:src="@drawable/notater" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notaterKnappForklaring"
                android:id="@+id/textView2"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:src="@drawable/sprak" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sprakknappforklaring"
                android:id="@+id/textView3"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:src="@drawable/avslutte" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avslutteknappforklaring"
                android:id="@+id/textView4"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:singleLine="true" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notaterTekst"
        android:id="@+id/textView5"
        android:textColor="#ffffff"
        android:textIsSelectable="true"
        android:textSize="15dp"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />


</RelativeLayout>
